# Ramadhan-Code-Fest-2026

./: .gitmodules
ai-red-flag-detector/: package-lock.json
ai-red-flag-detector/resources/views/: landing.blade.php  result.blade.php
ai-red-flag-detector/routes/: web.php
alquran_flutter/: README.md  alquran_api.dart  main.dart  pubspec.yaml  surah_detail_page.dart  surah_list_page.dart
color-picker/: README.md  index.html
color-picker/src/css/: style.css
color-picker/src/js/: script.js
eksploler/: .editorconfig  .gitignore  .kilocodeignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  bunfig.toml  contoh_grid_layout.html  package.json  tsconfig.json
eksploler/public/: index.css  index.html
eksploler/src/: formatter.ts  index.test.ts  index.ts  scanner.ts  server.ts  types.ts
printf-therightway/: README.md  print  print.c
ramadhan-excuse/: package-lock.json  package.json
ramadhan-excuse/app/components/: WalletConnect.vue
ramadhan-excuse/app/pages/: index.vue
ramadhan-excuse/lib/: solana.ts
sentinel/: .gitignore  LICENSE  README.md  pyproject.toml  sentinel_ai.py
sentinel/.github/workflows/: ci.yml  pypi-publish.yml
sentinel/tests/: test_basic.py
sin-calculator/src/: App.jsx
sin-calculator/src/components/: FintechSection.jsx  (+3 more)
zhoeryamh-widal-api/: .env.example  Dockerfile  README.md  Widal API Test.postman_collection.json  composer.json  docker-compose.yml
zhoeryamh-widal-api/config/: cors.php  widal.php
zhoeryamh-widal-api/docker/: entrypoint.sh  nginx.conf  supervisord.conf
zhoeryamh-widal-api/routes/: api.php
(+13 files in other folders)
